core/unpackaged/main/default/objects/Contact/fields/core_test_field__c.field-meta.xml
<CustomField>
    <fullName>core_test_field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>core test field</label>
    <type>Checkbox</type>
</CustomField>