core/unpackaged/main/default/objects/Contact/fields/Lark_connected__c.field-meta.xml
<CustomField>
    <fullName>Lark_connected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lark connected?</label>
    <type>Checkbox</type>
</CustomField>