core/unpackaged/main/default/objects/Contact/fields/Market_Timezone__c.field-meta.xml
<CustomField>
    <fullName>Market_Timezone__c</fullName>
    <label>Market Timezone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Market_Place_Trading_Hours</valueSetName>
    </valueSet>
</CustomField>