core/unpackaged/main/default/objects/Contact/fields/WeChat_connected__c.field-meta.xml
<CustomField>
    <fullName>WeChat_connected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WeChat connected?</label>
    <type>Checkbox</type>
</CustomField>