core/unpackaged/main/default/objects/Contact/recordTypes/China_contact_record.recordType-meta.xml
<RecordType>
    <fullName>China_contact_record</fullName>
    <active>true</active>
    <label>China contact record</label>
</RecordType>